--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="cybersecurity.html">Cybersecurity</a></li>
-							<li><a href="iot.html">information of Things</a></li>
+							<li><a href="Iot.html">information of Things</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="mailto:sixteentwelve2000@gmail.com" class="fa fa-envelope"><span class="label"></span></a></li>
